--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Smart Vaccine Reminder</title>
+</head>
+  
+<body>
+  
+</body>
+</html>
